# webgenie-task-generator

./: .env  .gitignore  README.md  pyproject.toml  run.sh
app/: constants.py  main.py  prompts.py
app/api/: api_router.py
app/api/endpoints/: task.py
app/core/: core.py  sqlite_cache.py  task_generator.py
app/datasets/: dataset.py  huggingface_dataset.py  synthetic_dataset.py
app/helpers/: llms.py
app/services/: task.py
